# bitvm2-gc

./: Cargo.toml  README.md  arg_mac_dv_snark_gc_report_2026-02-25_en.md
bristol/src/: bristol.rs
garbled-snark-verifier/: Cargo.toml
garbled-snark-verifier/src/: argo_mac.rs  lib.rs  transcript_commit.rs
garbled-snark-verifier/src/circuits/: basic.rs  dv_snark.rs  groth16.rs
garbled-snark-verifier/src/circuits/bigint/: add.rs  cmp.rs
garbled-snark-verifier/src/circuits/bn254/: finalexp.rs  fp254impl.rs  fq12.rs  g1.rs  pairing.rs
garbled-snark-verifier/src/circuits/sect233k1/: blake3_ckt.rs  builder.rs  curve_ckt.rs  curve_ref.rs  curve_scalar_mul_ckt.rs  dv_ckt.rs  dv_ref.rs  fr_ckt.rs  gf9_ckt.rs  gf9_eval_ckt.rs  gf_ckt.rs  gf_interpolate_ckt.rs  gf_mul_ckt.rs  mod.rs  types.rs
garbled-snark-verifier/src/core/: circuit.rs  evaluator.rs  gate.rs  lite_circuit.rs  mod.rs  s.rs  utils.rs  wire.rs
garbled-snark-verifier/src/dv_bn254/: dv_ckt.rs  dv_snark.rs
verifiable-circuit/: Cargo.toml
verifiable-circuit-babe/: Cargo.toml
verifiable-circuit-babe/src/: babe.rs  lib.rs
verifiable-circuit-babe/tests/: babe_e2e.rs
verifiable-circuit-host/: Cargo.toml
verifiable-circuit-host/examples/: gen-sub-circuits.rs
verifiable-circuit-host/src/: bn254_dv_snark.rs  bristol.rs  dummy_circuit.rs  dv_snark.rs  main.rs  mem_fs.rs  simple_circuit.rs  utils.rs  vhdl.rs
verifiable-circuit/src/: main.rs
