[package]
name = "verifiable-circuit-babe"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
bincode = { workspace = true }
blake3 = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = { workspace = true }
rand = "0.8.5"
rand_chacha = { version = "0.3", default-features = false }
